--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             line-height: 1.5;
 
         }
-        <img src="https://daothanhdat04.github.io/-nh/"
+        <img src="https://daothanhdat04.github.io/-nh/">
         h1 {
             font-family: 'Arial', sans-serif;
             font-size: 50px;
